--- a/microservices/nucleus/build.gradle
+++ b/microservices/nucleus/build.gradle
@@ -29,6 +29,10 @@ repositories {
 dependencies {
 	// Exported to consumers
 	api 'org.springframework.boot:spring-boot-starter'
+	// https://mvnrepository.com/artifact/org.springframework/spring-web
+	implementation("org.springframework:spring-web:6.2.11")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+	implementation("org.springframework.boot:spring-boot-starter-web:3.5.5")
 
 	// Lombok for development only
 	compileOnly 'org.projectlombok:lombok'
