--- a/microservices/nucleus/build.gradle
+++ b/microservices/nucleus/build.gradle
@@ -27,6 +27,8 @@ repositories {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	implementation("org.projectlombok:lombok:1.18.38")
 	// Exported to consumers
 	api 'org.springframework.boot:spring-boot-starter'
 	// https://mvnrepository.com/artifact/org.springframework/spring-web
