--- a/microservices/healthcaresuite/appointmentservice/build.gradle
+++ b/microservices/healthcaresuite/appointmentservice/build.gradle
@@ -20,10 +20,12 @@ configurations {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
 dependencies {
+	implementation 'com.buddhaditya:nucleus:0.0.1-SNAPSHOT'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.4.5")
