--- a/microservices/nucleus/build.gradle
+++ b/microservices/nucleus/build.gradle
@@ -37,11 +37,10 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-web:3.5.5")
 
 	// Lombok for development only
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok:1.18.38'
+	annotationProcessor 'org.projectlombok:lombok:1.18.38'
 
 	// Test dependencies
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
